--- a/public/index.html
+++ b/public/index.html
@@ -9,25 +9,34 @@
   <title>Express Sequelize SQLite</title>
 </head>
 <body>
-  <h1>Hello, this is a static page!</h1>
+  <h1 id="show"></h1>
+  <label>14天结果：<input id='result14'/></label>
+  <label>结构：<input id='_e'/></label>
+  <button id="createUserButton">预测</button>
 
   <script>
     const createUserButton = document.getElementById('createUserButton');
+    const show_text = document.getElementById('show');
+    
+    
 
     createUserButton.addEventListener('click', async () => {
-      const username = prompt('Enter username:');
-      const email = prompt('Enter email:');
+      const result14 = document.getElementById('result14').value;
+      const _e = document.getElementById('_e').value;
 
       try {
-        const response = await fetch('/api/create-user', {
+        const response = await fetch('/api/predict', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
           },
-          body: JSON.stringify({ username, email })
+          body: JSON.stringify({ result14, _e })
         });
 
         const data = await response.json();
+        const { prediction } = data;
+        show_text.innerHTML = prediction;
+
         console.log('Response:', data);
       } catch (error) {
         console.error('Error:', error);
